--- a/package.json
+++ b/package.json
@@ -4,15 +4,43 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.57.4",
+    "base-64": "^1.0.0",
+    "base64-arraybuffer": "^1.0.2",
+    "blob-util": "^2.0.2",
     "expo": "~54.0.6",
+    "expo-auth-session": "~7.0.8",
+    "expo-crypto": "~15.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-pager": "^0.0.3",
+    "react-native-razorpay": "^2.3.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-tab-view": "^4.1.3",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.3.0",
+    "uuid": "^13.0.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "supabase": "^2.40.7",
+    "typescript": "~5.9.2"
+  }
 }
