--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "~54.0.6",
     "expo-auth-session": "~7.0.8",
     "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.17",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "expo-web-browser": "~15.0.7",
